--- a/lecture_04/lecture_4.ipynb
+++ b/lecture_04/lecture_4.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "False"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,11 +254,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write down your solution!\n"
+    "# Write down your solution!\n",
+    "\n",
+    "list_colors = [\"red\", \"green\", \"yellow\", \"orange\"]\n",
+    "\"red\" in list_colors"
    ]
   },
   {
@@ -281,6 +295,25 @@
     "- Strictly less than (<), less than or equal (<=)\n",
     "- Equal (==)\n",
     "- Strictly more than (>), greater than or equal to (>=)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"ab\" != \"ab\")\n",
+    "print (\"ab\" != \"abc\")"
    ]
   },
   {
@@ -399,11 +432,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write down your own solution\n"
+    "# Write down your own solution\n",
+    "\n",
+    "print (np.exp(5) < 50)\n",
+    "x = -1\n",
+    "print(x**2 + 2*x + 1 == 0)"
    ]
   },
   {
@@ -541,11 +587,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your own code\n"
+    "# Write your own code\n",
+    "\n",
+    "age = 18\n",
+    "print((age < 20) | (age > 30))\n",
+    "print (not (age > 25) & (age <27))"
    ]
   },
   {
@@ -645,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -821,11 +880,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write down your solution to this problem\n"
+    "# Write down your solution to this problem\n",
+    "\n",
+    "vector_c = np.array([1, 2, 3])\n",
+    "print(vector_c)\n",
+    "vector_c.sum()"
    ]
   }
  ],
@@ -845,7 +926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
