--- a/lecture_03/lecture_3.ipynb
+++ b/lecture_03/lecture_3.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,8 @@
      "output_type": "stream",
      "text": [
       "21.991148575128552\n",
-      "0.0003637882707952594\n"
+      "5.540487995575833e-12\n",
+      "5.540487995575833e-12\n"
      ]
     }
    ],
@@ -170,7 +171,10 @@
     "\n",
     "x = 5\n",
     "print(np.pi*(x^2))\n",
-    "print((1/np.sqrt(2*np.pi))*np.exp(-x^2))"
+    "print((1/np.sqrt(2*np.pi))*np.exp(-x^2))\n",
+    "\n",
+    "x = 5 \n",
+    "print((1/np.sqrt(2*np.pi))*(np.exp(-x**2)))"
    ]
   },
   {
