--- a/lecture_07/lecture7.ipynb
+++ b/lecture_07/lecture7.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
    "source": [
     "# Argument:   \"Hello\" \n",
     "# Return:     Showing the message on screen\n",
@@ -83,9 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Argument:  3.14\n",
     "# Return:    The type of object, e.g. int, str, boolean, float, etc.\n",
@@ -95,9 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.142"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# First Argument:   np.pi     (a numeric value)\n",
     "# Second Argument:  6         (the number of decimals)\n",
@@ -108,9 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Argument: -4\n",
     "# Return:   The absolute value\n",
@@ -119,9 +160,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list_fruits = [\"Apple\",\"Orange\",\"Pear\"]\n",
     "\n",
@@ -142,20 +194,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.06585531e+00 9.87636335e-02 3.16977552e-01 5.12636422e+00\n",
+      " 1.33527029e+00 7.49772756e-01 9.61214790e-01 3.89864186e-01\n",
+      " 5.30800517e+00 1.52436433e+00 6.26016034e-01 3.20933321e-03\n",
+      " 9.75734002e-02 1.54671346e+00 1.79911968e-01 1.94424256e+00\n",
+      " 3.68645139e+00 5.68541973e-01 3.56630982e+00 1.08175612e+00]\n"
+     ]
+    }
+   ],
    "source": [
     "# Here \"df\" and \"size\" are both parameters\n",
     "# They get assigned the arguments \"2\" and \"20\", respectively\n",
     "# The return is a vector of random variables\n",
     "\n",
-    "vec_x = np.random.chisquare(df = 2, size = 20)\n"
+    "vec_x = np.random.chisquare(df = 2, size = 20)\n",
+    "print(vec_x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,26 +289,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We are going to define a function \"fn_compute_value\"\n",
     "# You can choose any name\n",
     "# Using prefixes like \"fn_\" can help you remember this is a \"function\" object\n",
-    "# What are the parameters?\n"
+    "# What are the parameters?\n",
+    "def fn_compute_value(P, r, n, t):\n",
+    "    V = P*(1 + (r/n))**(n*t)\n",
+    "    return V\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110.51432983541218"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# You can know compute the formula with different values\n",
     "\n",
     "#V1 = fn_compute_value(P = 1000, r = 0.01, n = 20, t=10)\n",
-    "#V2 = fn_compute_value(P = 10, r = 0.01, n = 20, t=10)\n"
+    "#V2 = fn_compute_value(P = 10, r = 0.01, n = 20, t=10)\n",
+    "fn_compute_value(P = 100, r = 0.01, n = 20, t = 10)\n"
    ]
   },
   {
@@ -260,11 +343,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your own code here\n"
+    "# Write your own code here\n",
+    "def f(x):\n",
+    "    f = x**2 + 2*x + 1\n",
+    "    return f\n",
+    "f(2)"
    ]
   },
   {
@@ -285,11 +383,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fail\n",
+      "pass\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your own code\n"
+    "# Write your own code\n",
+    "\n",
+    "def g(numeric_grade):\n",
+    "    if numeric_grade >= 50:\n",
+    "        return \"pass\"\n",
+    "    else:\n",
+    "        return \"fail\"\n",
+    "print(g(40))\n",
+    "\n",
+    "def k(numeric_grade):\n",
+    "    if numeric_grade >= 50:\n",
+    "        status = \"pass\"\n",
+    "    else:\n",
+    "        status = \"fail\"\n",
+    "    return status\n",
+    "print(k(60))\n",
+    "    \n"
    ]
   },
   {
@@ -346,9 +469,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# (a) Define function\n",
     "fn_sum = lambda x,y,z: x + y + z\n",
@@ -406,11 +540,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, False, True, False]\n",
+      "3\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your own code\n"
+    "# Write your own code\n",
+    "list_ages = [18, 29, 15, 32, 6]\n",
+    "result_list = []\n",
+    "\n",
+    "for age in list_ages:\n",
+    "    result_list.append(fn_iseligible_vote(age))\n",
+    "print(result_list)\n",
+    "print(np.sum(result_list))\n",
+    "\n",
+    "fn_iseligible_vote = lambda age: age >= 18\n",
+    "print(fn_iseligible_vote(20))"
    ]
   },
   {
