--- a/assingments/assignment5/assignment5.ipynb
+++ b/assingments/assignment5/assignment5.ipynb
@@ -27,11 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2635174\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here:\n"
+    "# Write your answer here:\n",
+    "print(\"2635174\")"
    ]
   },
   {
@@ -46,11 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here:\n"
+    "# Write your answer here:\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -68,12 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your answer here:\n",
-    "\n"
+    "import os"
    ]
   },
   {
@@ -117,39 +127,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/aidanli/Downloads/University/Freshman Courses/QTM151/qtm151_fall_2023/assingments/assignment5\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answer for (1) here\n",
-    "\n"
+    "current_directory = os.getcwd()\n",
+    "print(current_directory)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['wdi_data', 'assignment5.ipynb', 'clean_data']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer for (2) here\n"
+    "# Write your answer for (2) here\n",
+    "ls_files = os.listdir(current_directory)\n",
+    "print(ls_files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['wdi_2020.csv', 'wdi_2000.csv', 'features.xlsx']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer for (3) here\n"
+    "# Write your answer for (3) here\n",
+    "os.chdir(current_directory+\"/\"+ls_files[2])\n",
+    "os.chdir(current_directory+\"/wdi_data\")\n",
+    "print(os.listdir(os.getcwd()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['wdi_data', 'assignment5.ipynb', 'clean_data']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer for (4) here\n"
+    "# Write your answer for (4) here\n",
+    "os.chdir(current_directory)\n",
+    "print(os.listdir(os.getcwd()))"
    ]
   },
   {
@@ -177,12 +227,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your answer here:\n",
-    "\n"
+    "dataset_name = \"wdi_2000.csv\"\n",
+    "old_directory = \"wdi_data/\"\n",
+    "new_directory = \"clean_data/\"\n",
+    "old_path = old_directory + dataset_name\n",
+    "new_path = new_directory + dataset_name\n",
+    "\n",
+    "df = pd.read_csv(old_path)\n",
+    "df.to_csv(new_path, index = False)"
    ]
   },
   {
