--- a/assingments/assignment5/assignment5.ipynb
+++ b/assingments/assignment5/assignment5.ipynb
@@ -272,12 +272,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['wdi_2020.csv', 'wdi_2000.csv']\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answer here:\n",
-    "\n"
+    "list_filenames = os.listdir(\"wdi_data\")\n",
+    "list_csv_files = []\n",
+    "\n",
+    "for element in list_filenames:\n",
+    "    if element.endswith(\".csv\"):\n",
+    "        list_csv_files.append(element)\n",
+    "\n",
+    "print(list_csv_files)"
    ]
   },
   {
@@ -302,11 +317,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.075042938300964\n",
+      "17.71541950113379\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here\n"
+    "# Write your answer here\n",
+    "def bmi_function(w, h):\n",
+    "    BMI = w/h**2\n",
+    "    return BMI\n",
+    "\n",
+    "print(bmi_function(w = 85, h = 1.74))\n",
+    "print(bmi_function(w = 50, h = 1.68))"
    ]
   },
   {
@@ -321,11 +351,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.075042938300964\n",
+      "17.71541950113379\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here\n"
+    "# Write your answer here\n",
+    "bmi_func = lambda w,h: w/h**2\n",
+    "\n",
+    "BMI1 = bmi_func(w = 85, h = 1.74)\n",
+    "BMI2 = bmi_func(w = 50, h = 1.68)\n",
+    "\n",
+    "print(BMI1)\n",
+    "print(BMI2)"
    ]
   },
   {
