--- a/lecture_12/lecture_12.ipynb
+++ b/lecture_12/lecture_12.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# \"NaNs\" are a special number, available in the \"np\" library\n",
     "\n",
@@ -140,9 +151,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nan  4.  5.]\n",
+      "[ nan 0.25 0.2 ]\n",
+      "[nan  5.  6.]\n",
+      "[nan -3. -4.]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create two array with and without \"NaNs\"\n",
     "# The \"np.array()\" functions converts a list to an array\n",
@@ -170,9 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "4.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Some summary statistics will not work if there are \"NaNs\"\n",
     "# The \"np.mean()\" doesn't work if the mean includes \"NaNs\"\n",
@@ -195,9 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.5"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This command creates an empty dataframe\n",
     "# then creates a new column called \"x\" and computes its mean\n",
@@ -233,9 +275,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "circuitId       int64\n",
+       "circuitRef     object\n",
+       "name           object\n",
+       "location       object\n",
+       "country        object\n",
+       "lat           float64\n",
+       "lng           float64\n",
+       "alt            object\n",
+       "url            object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Produces a list with the data types of each column\n",
     "# Columns that say \"object\" have either strings or \n",
@@ -256,9 +318,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      True\n",
+       "1      True\n",
+       "2      True\n",
+       "3      True\n",
+       "4      True\n",
+       "      ...  \n",
+       "72     True\n",
+       "73     True\n",
+       "74     True\n",
+       "75    False\n",
+       "76    False\n",
+       "Name: alt, Length: 77, dtype: bool"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The \".str.isnumeric()\" checks whether each row is numeric or now.\n",
     "# Using the \".\" twice is an example of \"piping\"\n",
@@ -279,9 +363,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['\\\\N' '-7']\n"
+     ]
+    }
+   ],
    "source": [
     "# We can reference subattributes of columns in \".query()\"\n",
     "# The pd.unique() function extracts unique values from a list\n",
@@ -303,9 +395,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      10\n",
+      "1      18\n",
+      "2       7\n",
+      "3     109\n",
+      "4     130\n",
+      "     ... \n",
+      "72    108\n",
+      "73    255\n",
+      "74     15\n",
+      "75    NaN\n",
+      "76    NaN\n",
+      "Name: alt, Length: 77, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "# \"list_old\" encodes values we want to change\n",
     "# \"list_new\" encodes the values that will \"replace\" the old\n",
@@ -316,7 +427,9 @@
     "circuits[\"alt\"] = circuits[\"alt\"].replace(list_old, list_new)\n",
     "\n",
     "# Note: The option \"inplace = True\" permanently modifies the column\n",
-    "# circuits[\"alt\"].replace(list_old, list_new, inplace = True)\n"
+    "# circuits[\"alt\"].replace(list_old, list_new, inplace = True)\n",
+    "\n",
+    "print(circuits[\"alt\"])\n"
    ]
   },
   {
@@ -331,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,9 +527,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('O')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "circuits[\"alt\"].dtype"
    ]
@@ -445,9 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "248.1891891891892\n"
+     ]
+    }
+   ],
    "source": [
     "# pd.to_numeric() converts a column to numeric\n",
     "# Before you use this option, make sure to \"clean\" the variable\n",
@@ -512,7 +644,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your own code\n"
+    "# Write your own code\n",
+    "hemisphere = [-90, 0, 90]\n",
+    "\n"
    ]
   }
  ],
