--- a/lecture_13/lecture_13.ipynb
+++ b/lecture_13/lecture_13.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,9 +118,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "resultId             int64\n",
+       "raceId               int64\n",
+       "driverId             int64\n",
+       "constructorId        int64\n",
+       "number              object\n",
+       "grid                 int64\n",
+       "position            object\n",
+       "positionText        object\n",
+       "positionOrder        int64\n",
+       "points             float64\n",
+       "laps                 int64\n",
+       "time                object\n",
+       "milliseconds        object\n",
+       "fastestLap          object\n",
+       "rank                object\n",
+       "fastestLapTime      object\n",
+       "fastestLapSpeed     object\n",
+       "statusId             int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This code displays column types\n",
     "# \"int\" or \"float\" objects are numneric\n",
@@ -151,11 +180,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25840\n",
+      "1079\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your own code here\n"
+    "# Write your own code here\n",
+    "print(len(results))\n",
+    "print(len(results[\"raceId\"].unique()))"
    ]
   },
   {
@@ -182,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,9 +248,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean_points</th>\n",
+       "      <td>1.877053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sd_points</th>\n",
+       "      <td>4.169849</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min_points</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max_points</th>\n",
+       "      <td>50.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>count_obs</th>\n",
+       "      <td>25840.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   points\n",
+       "mean_points      1.877053\n",
+       "sd_points        4.169849\n",
+       "min_points       0.000000\n",
+       "max_points      50.000000\n",
+       "count_obs    25840.000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# The \".agg()\" subfunction computes aggregate statistics\n",
     "# The syntax is (\"column_name\",\"function_name\")\n",
@@ -241,9 +343,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "855"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# In this cases drivers engage in multiple car races\n",
     "# We can compute the aggregate statistics for each specific driver across\n",
@@ -270,9 +383,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12568"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We can aggregate statistics from multiple columns by\n",
     "# entering a list of column names in \"groupby\"\n",
@@ -307,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
