--- a/lecture_13/lecture_13.ipynb
+++ b/lecture_13/lecture_13.ipynb
@@ -369,7 +369,7 @@
     "                           max_points =  ('points','max'),\n",
     "                           count_obs   = ('points',len)))\n",
     "\n",
-    "len(drivers_agg)"
+    "drivers_agg"
    ]
   },
   {
@@ -457,7 +457,7 @@
     "\n",
     "Try it yourself!\n",
     "\n",
-    "- Create a new dataset by chaining that <br>\n",
+    "- Create a new dataset by chaining  <br>\n",
     "groups by \"raceId\" then computes the <br>\n",
     "aggregate statistics: \"points\" average <br> and \"laps\" average\n"
    ]
@@ -480,7 +480,7 @@
     "\n",
     "Try it yourself!\n",
     "\n",
-    "- Create a new dataset by chaining that <br>\n",
+    "- Create a new dataset by chaining <br>\n",
     "groups by \"constructorId\" (the team) then <br> \n",
     "computes the average number of \"points\"\n",
     "- Add a chain \".sort_values(...,ascending = False)\" <br>\n",
