--- a/assingments/assingment7/assignment7.ipynb
+++ b/assingments/assingment7/assignment7.ipynb
@@ -27,20 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aidan Li\n"
+      "2635174\n"
      ]
     }
    ],
    "source": [
     "# Write your answer here:\n",
-    "print(\"Aidan Li\")"
+    "print(2635174)"
    ]
   },
   {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
      "text": [
       "    studentid  numericgrade lettergrade\n",
       "0           1            61          C-\n",
-      "1           2             0         NaN\n",
+      "1           2             0           F\n",
       "2           3            14           F\n",
       "3           4            57           D\n",
       "4           5            72          C+\n",
@@ -125,7 +125,7 @@
    "source": [
     "# Write your answer here:\n",
     "students = pd.read_csv(\"data_raw/students.csv\")\n",
-    "bins = [0, 54, 59, 64, 69, 74, 79, 82, 86, 92, 100]\n",
+    "bins = [-1, 54, 59, 64, 69, 74, 79, 82, 86, 92, 100]\n",
     "labels = [\"F\", \"D\", \"C-\", \"C\", \"C+\", \"B-\", \"B\", \"B+\", \"A-\", \"A\"]\n",
     "students[\"lettergrade\"] = pd.cut(students[\"numericgrade\"], bins = bins, labels = labels)\n",
     "print(students)"
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,26 @@
       "1         17       1:29.937         1  \n",
       "2         17       1:29.958         1  \n",
       "3         16       1:30.163         1  \n",
-      "4         16       1:30.566         1  \n"
+      "4         16       1:30.566         1  \n",
+      "resultId           int64\n",
+      "raceId             int64\n",
+      "driverId           int64\n",
+      "constructorId      int64\n",
+      "number             int64\n",
+      "grid               int64\n",
+      "position          object\n",
+      "positionText      object\n",
+      "positionOrder      int64\n",
+      "points             int64\n",
+      "laps               int64\n",
+      "time              object\n",
+      "milliseconds      object\n",
+      "fastestLap        object\n",
+      "fastestLapTime    object\n",
+      "statusId           int64\n",
+      "dtype: object\n",
+      "Does not agree with the codebook\n",
+      "The dataframe I created is an object while the codebook contains an integer\n"
      ]
     }
    ],
@@ -228,7 +247,18 @@
     "# Note: When you run \"sprint_results.dtypes\" you will get the type (int, float, object)\n",
     "# Object represents columns coded as strings.\n",
     "print(sprint_results.head())\n",
-    "\n"
+    "column_data_types = sprint_results.dtypes\n",
+    "print(column_data_types)\n",
+    "\n",
+    "data_dataframe = sprint_results[\"position\"].dtype\n",
+    "data_type_in_dataframe = sprint_results[\"position\"].dtype\n",
+    "data_type_in_codebook = \"integer\"\n",
+    "if data_type_in_codebook == data_type_in_dataframe:\n",
+    "    print(\"Agrees with the codebook\")\n",
+    "else:\n",
+    "    print(\"Does not agree with the codebook\")\n",
+    "\n",
+    "print(\"The dataframe I created is an object while the codebook contains an integer\")"
    ]
   },
   {
@@ -254,19 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write your own code here\n",
-    "# Create and store a list of non-numeric values\n",
-    "sprint_results[\"position\"] = sprint_results[\"position\"].astype(str)\n",
-    "non_numeric_values = sprint_results[sprint_results[\"position\"].str.isnumeric()][\"position\"].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -317,44 +335,10 @@
     }
    ],
    "source": [
-    "# Create a list for replacement\n",
-    "sprint_results[\"position\"] = sprint_results[\"position\"].replace(non_numeric_values, np.nan)\n",
+    "# Write your own code here\n",
+    "non_numericvalues = sprint_results[~sprint_results[\"position\"].str.isnumeric()][\"position\"].unique()\n",
+    "sprint_results[\"position\"] = sprint_results[\"position\"].replace(non_numericvalues, np.nan)\n",
     "sprint_results[\"position\"] = pd.to_numeric(sprint_results[\"position\"], errors = \"coerce\")\n",
-    "print(sprint_results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "Can only use .str accessor with string values!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/aidanli/Downloads/University/Freshman Courses/QTM151/qtm151_fall_2023/assingments/assingment7/assignment7.ipynb Cell 16\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/aidanli/Downloads/University/Freshman%20Courses/QTM151/qtm151_fall_2023/assingments/assingment7/assignment7.ipynb#X26sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Task 1: Extract list of non-numeric values\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/aidanli/Downloads/University/Freshman%20Courses/QTM151/qtm151_fall_2023/assingments/assingment7/assignment7.ipynb#X26sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m non_numeric_values \u001b[39m=\u001b[39m sprint_results[\u001b[39m~\u001b[39msprint_results[\u001b[39m'\u001b[39;49m\u001b[39mposition\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mstr\u001b[39m.\u001b[39misnumeric()][\u001b[39m'\u001b[39m\u001b[39mposition\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39munique()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/aidanli/Downloads/University/Freshman%20Courses/QTM151/qtm151_fall_2023/assingments/assingment7/assignment7.ipynb#X26sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Task 2: Replace certain list of values with NaN\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/aidanli/Downloads/University/Freshman%20Courses/QTM151/qtm151_fall_2023/assingments/assingment7/assignment7.ipynb#X26sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m sprint_results[\u001b[39m'\u001b[39m\u001b[39mposition\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m sprint_results[\u001b[39m'\u001b[39m\u001b[39mposition\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mreplace(non_numeric_values, np\u001b[39m.\u001b[39mnan)\n",
-      "File \u001b[0;32m~/anaconda3/envs/qtm151/lib/python3.11/site-packages/pandas/core/generic.py:5989\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5982\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   5983\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[1;32m   5984\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[1;32m   5985\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[1;32m   5986\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[1;32m   5987\u001b[0m ):\n\u001b[1;32m   5988\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[0;32m-> 5989\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
-      "File \u001b[0;32m~/anaconda3/envs/qtm151/lib/python3.11/site-packages/pandas/core/accessor.py:224\u001b[0m, in \u001b[0;36mCachedAccessor.__get__\u001b[0;34m(self, obj, cls)\u001b[0m\n\u001b[1;32m    221\u001b[0m \u001b[39mif\u001b[39;00m obj \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    222\u001b[0m     \u001b[39m# we're accessing the attribute of the class, i.e., Dataset.geo\u001b[39;00m\n\u001b[1;32m    223\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessor\n\u001b[0;32m--> 224\u001b[0m accessor_obj \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_accessor(obj)\n\u001b[1;32m    225\u001b[0m \u001b[39m# Replace the property with the accessor object. Inspired by:\u001b[39;00m\n\u001b[1;32m    226\u001b[0m \u001b[39m# https://www.pydanny.com/cached-property.html\u001b[39;00m\n\u001b[1;32m    227\u001b[0m \u001b[39m# We need to use object.__setattr__ because we overwrite __setattr__ on\u001b[39;00m\n\u001b[1;32m    228\u001b[0m \u001b[39m# NDFrame\u001b[39;00m\n\u001b[1;32m    229\u001b[0m \u001b[39mobject\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__setattr__\u001b[39m(obj, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_name, accessor_obj)\n",
-      "File \u001b[0;32m~/anaconda3/envs/qtm151/lib/python3.11/site-packages/pandas/core/strings/accessor.py:181\u001b[0m, in \u001b[0;36mStringMethods.__init__\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, data) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    179\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39marrays\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstring_\u001b[39;00m \u001b[39mimport\u001b[39;00m StringDtype\n\u001b[0;32m--> 181\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_inferred_dtype \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate(data)\n\u001b[1;32m    182\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_is_categorical \u001b[39m=\u001b[39m is_categorical_dtype(data\u001b[39m.\u001b[39mdtype)\n\u001b[1;32m    183\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_is_string \u001b[39m=\u001b[39m \u001b[39misinstance\u001b[39m(data\u001b[39m.\u001b[39mdtype, StringDtype)\n",
-      "File \u001b[0;32m~/anaconda3/envs/qtm151/lib/python3.11/site-packages/pandas/core/strings/accessor.py:235\u001b[0m, in \u001b[0;36mStringMethods._validate\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    232\u001b[0m inferred_dtype \u001b[39m=\u001b[39m lib\u001b[39m.\u001b[39minfer_dtype(values, skipna\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m    234\u001b[0m \u001b[39mif\u001b[39;00m inferred_dtype \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m allowed_types:\n\u001b[0;32m--> 235\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mCan only use .str accessor with string values!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    236\u001b[0m \u001b[39mreturn\u001b[39;00m inferred_dtype\n",
-      "\u001b[0;31mAttributeError\u001b[0m: Can only use .str accessor with string values!"
-     ]
-    }
-   ],
-   "source": [
-    "# Task 1: Extract list of non-numeric values\n",
-    "non_numeric_values = sprint_results[~sprint_results['position'].str.isnumeric()]['position'].unique()\n",
-    "\n",
-    "# Task 2: Replace certain list of values with NaN\n",
-    "sprint_results['position'] = sprint_results['position'].replace(non_numeric_values, np.nan)\n",
-    "\n",
-    "# Task 3: Convert the \"position\" column to numeric\n",
-    "sprint_results['position'] = pd.to_numeric(sprint_results['position'], errors='coerce')\n",
-    "\n",
-    "# Task 4: Display the updated DataFrame\n",
     "print(sprint_results)"
    ]
   },
@@ -386,11 +370,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    mean       std\n",
+      "constructorId                     \n",
+      "9               3.363636  2.419617\n",
+      "6               4.750000  2.734460\n",
+      "131             4.833333  4.174236\n",
+      "1               7.250000  3.137022\n",
+      "214            11.636364  4.006812\n",
+      "117            12.750000  3.165869\n",
+      "51             13.000000  3.549648\n",
+      "210            13.833333  5.236816\n",
+      "213            13.909091  2.981763\n",
+      "3              16.181818  2.857208\n",
+      "Lowest mean position is 9\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your own code\n"
+    "# Write your own code\n",
+    "df_aggConstrcId_pos = sprint_results.groupby(\"constructorId\")[\"position\"].agg([\"mean\", \"std\"])\n",
+    "df_aggConstrcId_pos = df_aggConstrcId_pos.sort_values(by = \"mean\")\n",
+    "print(df_aggConstrcId_pos)\n",
+    "lowest_mean_constructor = df_aggConstrcId_pos.index[0]\n",
+    "print(\"Lowest mean position is\" + \" \" + str(lowest_mean_constructor))"
    ]
   },
   {
@@ -419,11 +428,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    mean       std\n",
+      "constructorId                     \n",
+      "1               7.250000  3.137022\n",
+      "3              16.181818  2.857208\n",
+      "6               4.750000  2.734460\n",
+      "9               3.363636  2.419617\n",
+      "51             13.000000  3.549648\n",
+      "117            12.750000  3.165869\n",
+      "131             4.833333  4.174236\n",
+      "210            13.833333  5.236816\n",
+      "213            13.909091  2.981763\n",
+      "214            11.636364  4.006812\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your own code\n"
+    "# Write your own code\n",
+    "filtered_results = sprint_results.query(\"raceId >= 100\")\n",
+    "df_subAggConstr_pos = filtered_results.groupby(\"constructorId\")[\"position\"].agg([\"mean\", \"std\"])\n",
+    "print(df_subAggConstr_pos)"
    ]
   }
  ],
