--- a/quizzes/quiz3/quiz3.ipynb
+++ b/quizzes/quiz3/quiz3.ipynb
@@ -197,7 +197,7 @@
     "# Write your own code\n",
     "data = pd.read_csv(\"data_raw/races.csv\")\n",
     "bins = [1950, 1975, 2000, data[\"year\"].max()]\n",
-    "labels = [\"1950-1974\", \"1975-1999\", \"2000-onwards\"]\n",
+    "labels = [\"1950-1974\", \"1975-1999\", \"2000-onwards\"] \n",
     "\n",
     "data[\"year_brackets\"] = pd.cut(data[\"year\"], bins=bins, labels=labels)\n",
     "print(data[\"year_brackets\"])\n"
@@ -335,17 +335,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['resultId', 'raceId', 'driverId', 'constructorId', 'number', 'grid',\n",
-      "       'position', 'positionText', 'positionOrder', 'points_sprint', 'laps',\n",
-      "       'time', 'milliseconds', 'fastestLap', 'fastestLapTime', 'statusId'],\n",
-      "      dtype='object')\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/aidanli/Downloads/University/Freshman Courses/QTM151/qtm151_fall_2023/quizzes/quiz3/quiz3.ipynb Cell 18\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/aidanli/Downloads/University/Freshman%20Courses/QTM151/qtm151_fall_2023/quizzes/quiz3/quiz3.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Write your own code\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/aidanli/Downloads/University/Freshman%20Courses/QTM151/qtm151_fall_2023/quizzes/quiz3/quiz3.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m sprint_results \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39mdata_raw/sprint_results.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/aidanli/Downloads/University/Freshman%20Courses/QTM151/qtm151_fall_2023/quizzes/quiz3/quiz3.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m dictionary \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mpoints\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mpoints_sprint\u001b[39m\u001b[39m\"\u001b[39m}\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/aidanli/Downloads/University/Freshman%20Courses/QTM151/qtm151_fall_2023/quizzes/quiz3/quiz3.ipynb#X23sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m sprint_results_renamed \u001b[39m=\u001b[39m sprint_results\u001b[39m.\u001b[39mrename(columns \u001b[39m=\u001b[39m dictionary)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
@@ -354,7 +355,7 @@
     "sprint_results = pd.read_csv(\"data_raw/sprint_results.csv\")\n",
     "dictionary = {\"points\": \"points_sprint\"}\n",
     "sprint_results_renamed = sprint_results.rename(columns = dictionary)\n",
-    "print(sprint_results_renamed.columns)\n"
+    "print(sprint_results_renamed.columns)"
    ]
   },
   {
